# tahoe-lafs

./: .appveyor.yml  .codecov.yml  .coveragerc  .coveralls.yml  .darcs-boringfile  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  CLASSIFIERS.txt  CONTRIBUTORS.rst  COPYING  COPYING.GPL  COPYING.TGPPL  COPYING.TGPPL.html  COPYING.TGPPL.rst  CREDITS  Dockerfile  Dockerfile.dev  GNUmakefile  MANIFEST.in  Makefile  NEWS  NEWS.rst  README  README.rst  README.txt  README.win32  TODO  Tahoe.home  _auto_deps.py  build-win7-x86-64.bat  builddir.py  calcdeps.py  client.tac  contributors.rst  debugshell.py  default.nix  (+29 more)
.circleci/: Dockerfile.centos  Dockerfile.centos-7  Dockerfile.debian  Dockerfile.debian-8  Dockerfile.debian-9  Dockerfile.debian-9-tor  Dockerfile.fedora  Dockerfile.fedora-28  Dockerfile.fedora-29  Dockerfile.oraclelinux  Dockerfile.pypy  Dockerfile.slackware  Dockerfile.ubuntu  Dockerfile.ubuntu-16.04  Dockerfile.ubuntu-18.04  apt-tor-list  bootstrap-test-environment.sh  circleci.txt  config.yml  create-virtualenv.sh  env.nix  fix-permissions.sh  install-git.sh  lib.sh  populate-wheelhouse.sh  prepare-image.sh  python.nix  rebuild-images.sh  run-build-locally.sh  run-tests.sh  secret-env-cipher  setup-virtualenv.sh
.github/: CONTRIBUTING.rst
.github/workflows/: ci.yml  nix.yml  py3.yml  test-report.yml
Crypto/: bench.py  test.py
Crypto/Demo/: chaum.py
Crypto/Protocol/: AllOrNothing.py  Chaffing.py
Crypto/PublicKey/: DSA.py  ElGamal.py  pubkey.py  qNEW.py
Crypto/Util/: bench.py  number.py  test.py
Crypto/debian/: changelog
Crypto/src/: block_template.c
Crypto/test/: test_number.py  test_publickey.py  test_randpool.py  testdata.py
allmydata/: bucketstore.py  client.py  download.py  encode.py  encode_new.py  filetable.py  interfaces.py  manhole.py  node.py  queen.py  storageserver.py  upload.py  vdrive.py  webish.py
allmydata/scripts/: runner.py
allmydata/test/: test_client.py  test_encode.py  test_filetable.py  test_queen.py  test_storage.py  test_system.py  test_upload.py  test_vdrive.py  trial_figleaf.py
allmydata/util/: iputil.py
allmydata/web/: directory.xhtml  welcome.xhtml
benchmarks/: README.rst  __init__.py  conftest.py  test_cli.py  test_immutable.py  upload_download.py
contrib/: README  tahoe-fuse.py
docs/: CLI.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  INSTALL.rst  Makefile  Makefile-old  OS-X.rst  README.txt  URI-extension.txt  about-tahoe.rst  about.html  about.rst  accepting-donations.rst  anonymity-configuration.rst  anonymity-roadmap.rst  architecture.rst  architecture.txt  aspiration-contract.txt  backdoors.rst  backdoors.txt  backupdb.rst  backupdb.txt  building-on-windows.rst  cautions.rst  check_running.py  codemap.txt  conf.py  configuration.rst  configuration.txt  convergence-secret.rst  debian.rst  debian.txt  denver.txt  desert-island.rst  developer-guide.rst  developer-release-signatures  dirnodes.txt  donations.rst  expenses.rst  file-encoding.txt  (+51 more)
docs/man/: tahoe.1
extensions/: tahoe-fuse.py
integration/: README  _vectors_chk.yaml  conftest.py  grid.py  install-tor.sh  test_aaa_aardvark.py  test_alias.py  test_aliases.py  test_client.py  test_get_put.py  test_grid_manager.py  test_hypothesis_happiness.py  test_hypothesis_old_happiness.py  test_i2p.py  test_magic_folder.py  test_node.py  test_servers_of_happiness.py  test_sftp.py  test_smoke.py  test_storage_http.py  test_streaming_logs.py  test_testing.py  test_tor.py  test_vectors.py  test_vectors.yaml  test_web.py  util.py  vectors.py
mac/: COPYING.LGPL2  Makefile  README.txt  allmydata.icns  allmydata_tahoe.py  amdicon.py  depends.py  fuse.py  pkgreshook.py  setup.py  tahoefuse.py
misc/: boodlegrid.tac  build-deb.py  build-deb.sh  check-build.py  count_dirs.py  coverage.el  coverage2el.py  coverage2text.py  cpu-watcher-poll.py  cpu-watcher.tac  delete-old-helper.sh  figleaf.el  figleaf.excludes  figleaf2el.py  figleaf2html  find-dep-eggs.py  find-share-anomalies.py  find-trailing-spaces.py  find_trial.py  fixshebangs.py  get-logs.py  get-version.py  getmem.py  hatch-eggs.py  logtool.py  make-canary-files.py  make-tarballs.sh  make-version.py  make_umid  pyver.py  ringsim.py  run-with-pythonpath.py  show-tool-versions.py  simulate_load.py  simulator.py  sizes.py  storage-overhead.py  sub-ver.py  test-darcs-boringfile.py  test_mac_diskimage.py  (+1 more)
newsfragments/: 1023.documentation  1101.feature  1432.feature  1549.installation  1792.feature  1827.removed  1879.documentation  2098.removed  2239.removed  2392.removed  2448.minor  2479.other  2749.installation  2755.other  2771.other  2870.bugfix  2908.other  2916.feature  2920.other  2933.other  2935.bugfix  2936.bugfix  2941.bugfix  2942.feature  2944.bugfix  2945.feature  2950.bugfix  2954.feature  2955.feature  2955.removed  2956.other  2957.installation  2958.other  2959.other  2960.other  2961.other  2962.other  2965.bugfix  2966.other  2967.other  (+212 more)
nix/: Cargo.lock.patch  autobahn.nix  cbor2.nix  chutney.nix  collections-extended.nix  default.nix  eliot.nix  future.nix  integrationtests.nix  klein.nix  lib.nix  module-utils.nix  module.nix  nevow.nix  nevow.patch  overlay.nix  overlays.nix  py3.nix  pycddl.nix  pyopenssl.nix  pytest-circleci-parallelized.nix  python-overrides.nix  pyutil.nix  sources.json  tahoe-lafs.nix  tests.nix  twisted.nix  twisted.patch  txi2p.nix  txtorcon.nix  unittests.nix
pyfec/: COPYING  README.txt  TODO  setup.py
release-tools/: fetch-pr.py
setuptools-0.6c15dev.egg/: pkg_resources.py
setuptools-0.6c16dev.egg/: pkg_resources.py  zetuptoolz.txt
setuptools-0.6c16dev2.egg/: pkg_resources.py
setuptools-0.6c16dev4.egg/: pkg_resources.py  zetuptoolz.txt
setuptools-0.6c16dev5.egg/: pkg_resources.py  zetuptoolz.txt
static/: tahoe.py
topfiles/: 2367.removal  2491.config  2759.docs  2773.docs  2776.change  2781.packaging  2783.docs  2794.change  PR242.docs
windows/: Makefile  confwiz.py  depends.py  installer.iss  installer.tmpl  registry.py  setup.py  tahoe.py  tahoesvc.py
zfec/: COPYING  README.txt  TODO  setup.py
(+1197 files in other folders)
