# https://setuptools.pypa.io/en/latest/build_meta.html
# https://github.com/pypa/setuptools_scm
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/allmydata/_version.py"
tag_regex = "^tahoe-lafs-(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"

[tool.towncrier]
    package_dir = "src"
    package = "allmydata"
    filename = "NEWS.rst"
    directory = "newsfragments"
    start_string = ".. towncrier start line"
    title_format = "Release {version} ({project_date})"
    issue_format = "`#{issue} <https://tahoe-lafs.org/trac/tahoe-lafs/ticket/{issue}>`_"
    underlines = [
        "'",
        "-",
        "~",
    ]

    [[tool.towncrier.type]]
        directory = "incompat"
        name = "Backwards Incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bug Fixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "installation"
        name = "Dependency/Installation Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "configuration"
        name = "Configuration Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "documentation"
        name = "Documentation Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removed"
        name = "Removed Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "other"
        name = "Other Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "minor"
        name = "Misc/Other"
        showcontent = false
